<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@id/cardView"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:cardElevation="10dp"
             android:layout_margin="10dp"
            app:cardCornerRadius="5dp"
            android:elevation="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="vertical">

                  <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/id1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="86"
                        android:gravity="start"
                        android:text="@string/phone_num" />

                      <TextView
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:text="@string/icome"
                          android:gravity="center"
                          android:maxLines="1"
                          android:backgroundTint="@color/black"
                          android:textColor="@color/white"
                          android:background="@drawable/incoming_icon"
                          android:layout_weight="14"
                          android:textSize="9sp"/>
                  </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/day_of"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="4dp"
                    android:paddingEnd="2dp"
                    android:text="@string/day_of_week" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="2dp"
                    android:paddingEnd="4dp"
                    android:text="@string/date_month_year" />

                <TextView
                    android:id="@+id/date_month_year"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:text="@string/time" />



                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:paddingEnd="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/duration" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_duration"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="2dp"
                        android:paddingStart="2dp"
                        android:text="@string/from" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from_phone_num"/>
                </LinearLayout>

                <View style="@style/Divider" android:layout_margin="8dp"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/id_mic_logo"
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:layout_weight="10"
                        android:background="@drawable/microphone"
                        android:backgroundTintMode="add" />

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="0dp"
                        android:layout_margin="6dp"
                        android:layout_weight="80"
                        android:layout_height="wrap_content"
                        android:text="@string/user_detail_no_recording" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="32dp"
                        android:id="@+id/id_play"
                        android:layout_weight="10"
                        android:background="@drawable/playbutton"
                        android:filterTouchesWhenObscured="false" />

                </LinearLayout>





        </LinearLayout>

     </androidx.cardview.widget.CardView>


</LinearLayout>